| Bug #41403 | mysqlbinlog --help doesn't mention DECODE-ROWS or UNSPEC for --base64-output | ||
|---|---|---|---|
| Submitted: | 11 Dec 2008 16:29 | Modified: | 4 Aug 2009 23:52 |
| Reporter: | Jon Stephens | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Command-line Clients | Severity: | S3 (Non-critical) |
| Version: | 5.1+ | OS: | Any |
| Assigned to: | Jim Winstead | CPU Architecture: | Any |
[11 Dec 2008 17:44]
MySQL Verification Team
Thank you for the bug report.
[15 May 2009 20:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74261 2897 Jim Winstead 2009-05-15 Add usage for --base64-output=DECODE-ROWS and note that UNSPEC is intentionally unmentioned (it is just a placeholder). (Bug #41403) modified: client/mysqlbinlog.cc
[15 May 2009 20:28]
Jim Winstead
Self-approving, due to trivial nature of the patch. 'UNSPEC' will remain unmentioned -- it's just a placeholder value.
[13 Jul 2009 19:42]
Jim Winstead
Pushed to 5.1-bugteam and mysql-pe.
[4 Aug 2009 19:50]
Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090804194615-h40sa098mx4z49qg) (version source revid:jimw@mysql.com-20090713193847-xj6gbgm2a1zwwanv) (merge vers: 5.4.4-alpha) (pib:11)
[4 Aug 2009 20:45]
Bugs System
Pushed into 5.1.38 (revid:davi.arnaut@sun.com-20090804204317-ggodqkik7de6nfpz) (version source revid:davi.arnaut@sun.com-20090804204317-ggodqkik7de6nfpz) (merge vers: 5.1.38) (pib:11)
[4 Aug 2009 23:52]
Paul DuBois
Cosmetic change. No changelog entry needed.
[1 Oct 2009 5:59]
Bugs System
Pushed into 5.1.39-ndb-6.3.28 (revid:jonas@mysql.com-20091001055605-ap2kiaarr7p40mmv) (version source revid:jonas@mysql.com-20091001055605-ap2kiaarr7p40mmv) (merge vers: 5.1.39-ndb-6.3.28) (pib:11)
[1 Oct 2009 7:25]
Bugs System
Pushed into 5.1.39-ndb-7.0.9 (revid:jonas@mysql.com-20091001072547-kv17uu06hfjhgjay) (version source revid:jonas@mysql.com-20091001071652-irejtnumzbpsbgk2) (merge vers: 5.1.39-ndb-7.0.9) (pib:11)
[1 Oct 2009 13:25]
Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:jonas@mysql.com-20091001123013-g9ob2tsyctpw6zs0) (version source revid:jonas@mysql.com-20091001123013-g9ob2tsyctpw6zs0) (merge vers: 5.1.39-ndb-7.1.0) (pib:11)
[5 Oct 2009 10:50]
Bugs System
Pushed into 5.1.39-ndb-6.2.19 (revid:jonas@mysql.com-20091005103850-dwij2dojwpvf5hi6) (version source revid:jonas@mysql.com-20090930185117-bhud4ek1y0hsj1nv) (merge vers: 5.1.39-ndb-6.2.19) (pib:11)

Description: In mysqlbinlog.cc can be found the following: const char *base64_output_mode_names[]= {"NEVER", "AUTO", "ALWAYS", "UNSPEC", "DECODE-ROWS", NullS}; TYPELIB base64_output_mode_typelib= { array_elements(base64_output_mode_names) - 1, "", base64_output_mode_names, NULL }; However, no mention of DECODE-ROWS or UNSPEC is made in the help output: Usage: ./mysqlbinlog [options] log-files -?, --help Display this help and exit. --base64-output[=name] Determine when the output statements should be base64-encoded BINLOG statements: 'never' disables it and works only for binlogs without row-based events; 'auto' is the default and prints base64 only when necessary (i.e., for row-based events and format description events); 'always' prints base64 whenever possible. 'always' is for debugging only and should not be used in a production system. The default is 'auto'. --base64-output is a short form for --base64-output=always. How to repeat: See Description. Checked with following versions: 5.1.31, 5.1.30-ndb-6.4.0, 6.0.9 all from bzr. Suggested fix: Add descriptions of DECODE-ROWS and UNSPEC options to mysqlbinlog help output for --base64-output option. Also please inform Docs what --base64-output=UNSPEC does, because this option is not documented.